updating pkg and style file

--- a/style.css
+++ b/style.css
@@ -1,155 +1,1 @@
-/* apply a natural box layout model to all elements, but allowing components to change */
-html {
-  box-sizing: border-box;
-}
-*,
-*:before,
-*:after {
-  box-sizing: inherit;
-}
-
-li,
-ul {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-}
-
-body {
-  margin: 0;
-  font-size: 14px;
-  font-family: "Raleway", sans-serif;
-}
-
-.eats-header {
-  background-color: #006ef5;
-}
-
-.eats-nav {
-  display: none;
-}
-
-@media (min-width: 768px) {
-  .eats-nav {
-    display: block;
-    height: 53px;
-    background-color: #004eae;
-    padding: 0 40px 0 25px;
-  }
-}
-
-.eats-nav-list {
-  display: inline-flex;
-  align-items: center;
-}
-
-.eats-nav-list-item {
-  line-height: 53px;
-}
-
-.eats-nav-list-item--active,
-.eats-nav-list-item:hover {
-  background-color: #013371;
-}
-
-.eats-nav-list-item--active .eats-nav-link,
-.eats-nav-list-item:hover .eats-nav-link {
-  color: #ffc700;
-}
-/* .eats-nav-list-item {
-  &:hover {
-    background-color: #013371;
-
-    .eats-nav-link {
-      color: #ffc700;
-    }
-  }
-} */
-
-.eats-nav-link {
-  color: #fff;
-  display: block;
-  padding: 0 15px;
-}
-
-.eats-header-name {
-  display: none;
-}
-
-@media (min-width: 768px) {
-  .eats-header-name {
-    display: inline;
-    padding-left: 55px;
-    font-weight: 600;
-  }
-}
-
-.eats-header-link {
-  background: url("./images/logo.svg") no-repeat top 10px center/42px;
-  height: 53px;
-  display: block;
-  color: white;
-  text-decoration: none;
-}
-
-@media (min-width: 768px) {
-  .eats-header-link {
-    padding: 10px 40px;
-    background-position: top 10px left 40px;
-    display: inline-flex;
-    align-items: center;
-  }
-}
-
-.eats-main-inner-wrapper {
-  padding: 20px;
-}
-
-@media (min-width: 768px) {
-  .eats-main-inner-wrapper {
-    padding: 20px 40px;
-  }
-}
-
-@media (min-width: 768px) {
-  .eats-post {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-gap: 0 20px;
-    margin-bottom: 50px;
-  }
-}
-
-.eats-post-date {
-  padding: 20px 0 15px;
-  color: #767676;
-  display: block;
-}
-
-.eats-post-image {
-  max-width: 100%;
-}
-
-.eats-post-link {
-  color: #cc4b00;
-  margin: 0;
-}
-
-.eats-post-link:hover {
-  color: #013371;
-}
-
-.eats-post-title {
-  font-size: 36px;
-  font-weight: normal;
-  margin: 0;
-  width: 70%; /* ?? */
-}
-
-.eats-post-read-more {
-  background: url("./icons/cheveron-right.svg") no-repeat center right/20px;
-}
-
-.eats-post-content-description {
-  padding: 20px 0;
-}
+/*Theme Name: eats-wp-theme */
